--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,24 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".screens.add.AddFragment">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/add_header_card"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </com.google.android.material.textfield.TextInputEditText>
-        </com.google.android.material.textfield.TextInputLayout>
 
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/add_date_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:text="Дата"
+        app:layout_constraintBottom_toBottomOf="@+id/add_date_til"
+        app:layout_constraintEnd_toEndOf="@+id/add_mileage_title"
+        app:layout_constraintStart_toStartOf="@+id/add_mileage_title"
+        app:layout_constraintTop_toTopOf="@+id/add_date_til" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/add_date_til"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@id/add_mileage_til"
+        app:layout_constraintStart_toStartOf="@id/add_mileage_til"
+        app:layout_constraintTop_toTopOf="parent" >
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/add_date_et"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="01.01.0001"
+            android:gravity="center_horizontal"
+            />
+
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/add_mileage_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:text="Пробіг"
+        android:gravity="end"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@id/add_mileage_til"
+        app:layout_constraintBottom_toBottomOf="@+id/add_mileage_til"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/add_mileage_til" />
+
+    <TextView
+        android:id="@+id/add_mileage_title2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:text="км"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/add_mileage_til"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/add_mileage_til"
+        app:layout_constraintTop_toTopOf="@+id/add_mileage_til" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/add_mileage_til"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:hint="123 456"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toStartOf="@id/add_mileage_title2"
+        app:layout_constraintStart_toEndOf="@+id/add_mileage_title"
+        app:layout_constraintTop_toBottomOf="@+id/add_date_til">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/add_mileage_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
