--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -13,7 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="end"
-        android:text="Дата"
+        android:text="@string/text_date"
         app:layout_constraintBottom_toBottomOf="@+id/add_date_til"
         app:layout_constraintEnd_toEndOf="@+id/add_mileage_title"
         app:layout_constraintStart_toStartOf="@+id/add_mileage_title"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Пробіг"
+        android:text="@string/text_mileage"
         android:gravity="end"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toStartOf="@id/add_mileage_til"
@@ -58,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:text="км"
+        android:text="@string/text_km"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/add_mileage_til"
         app:layout_constraintEnd_toEndOf="parent"
