--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -27,4 +27,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_to_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="to info fragment"
+        app:layout_constraintBottom_toTopOf="@+id/list_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_to_setting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="to setting fragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/list_text" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
