--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_list"
+        android:id="@+id/fragment_list"
         android:title="List"
         android:icon="@drawable/ic_list"
         />
     <item
-        android:id="@+id/menu_car_info"
+        android:id="@+id/fragment_info"
         android:title="Car info"
         android:icon="@drawable/ic_car"
         />
     <item
-        android:id="@+id/menu_setting"
+        android:id="@+id/fragment_setting"
         android:title="Setting"
         android:icon="@drawable/ic_setting"
         />
