--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/fragment_list"
+        android:id="@id/list_graph"
         android:title="List"
         android:icon="@drawable/ic_list"
         />
     <item
-        android:id="@+id/fragment_info"
+        android:id="@id/info_graph"
         android:title="Car info"
         android:icon="@drawable/ic_car"
         />
     <item
-        android:id="@+id/fragment_setting"
+        android:id="@id/setting_graph"
         android:title="Setting"
         android:icon="@drawable/ic_setting"
         />
