--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,8 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_host"
-    app:startDestination="@id/list_graph">
-    <include app:graph="@navigation/info_graph" />
-    <include app:graph="@navigation/list_graph" />
-    <include app:graph="@navigation/setting_graph" />
+    app:startDestination="@id/tabsFragment">
+    <fragment
+        android:id="@+id/tabsFragment"
+        android:name="com.alex.mcarstatistic.screens.TabsFragment"
+        android:label="fragment_tabs"
+        tools:layout="@layout/fragment_tabs" >
+        <action
+            android:id="@+id/action_tabsFragment_to_addFragment"
+            app:destination="@id/addFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addFragment"
+        android:name="com.alex.mcarstatistic.screens.add.AddFragment"
+        android:label="fragment_add"
+        tools:layout="@layout/fragment_add" />
 </navigation>
