--- a/app/src/main/res/navigation/setting_graph.xml
+++ b/app/src/main/res/navigation/setting_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/settingFragment"
-        android:name="com.alex.mcarstatistic.screens.setting.SettingFragment"
+        android:name="com.alex.mcarstatistic.screens.tabs.setting.SettingFragment"
         android:label="fragment_setting"
         tools:layout="@layout/fragment_setting" />
 </navigation>
