--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,88 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1E1E1E"
     tools:context=".screens.add.AddFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/add_date_title"
-        android:layout_width="0dp"
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="end"
-        android:text="@string/text_date"
-        app:layout_constraintBottom_toBottomOf="@+id/add_date_til"
-        app:layout_constraintEnd_toEndOf="@+id/add_mileage_title"
-        app:layout_constraintStart_toStartOf="@+id/add_mileage_title"
-        app:layout_constraintTop_toTopOf="@+id/add_date_til" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/add_date_til"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@id/add_mileage_til"
-        app:layout_constraintStart_toStartOf="@id/add_mileage_til"
-        app:layout_constraintTop_toTopOf="parent" >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/add_date_et"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="01.01.0001"
-            android:gravity="center_horizontal"
-            />
-
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/add_mileage_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:text="@string/text_mileage"
-        android:gravity="end"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/add_mileage_til"
-        app:layout_constraintBottom_toBottomOf="@+id/add_mileage_til"
+        android:id="@+id/add_header_card"
+        app:cardBackgroundColor="#FFFFFF"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/add_mileage_til" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <TextView
-        android:id="@+id/add_mileage_title2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:text="@string/text_km"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/add_mileage_til"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/add_mileage_til"
-        app:layout_constraintTop_toTopOf="@+id/add_mileage_til" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/add_mileage_til"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="123 456"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toStartOf="@id/add_mileage_title2"
-        app:layout_constraintStart_toEndOf="@+id/add_mileage_title"
-        app:layout_constraintTop_toBottomOf="@+id/add_date_til">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/add_mileage_et"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            />
+            android:padding="8dp">
 
-    </com.google.android.material.textfield.TextInputLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/add_date_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:text="@string/text_date"
+                app:layout_constraintBottom_toBottomOf="@+id/add_date_til"
+                app:layout_constraintEnd_toEndOf="@+id/add_mileage_title"
+                app:layout_constraintStart_toStartOf="@+id/add_mileage_title"
+                app:layout_constraintTop_toTopOf="@+id/add_date_til" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/add_date_til"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="text"
+                app:layout_constraintEnd_toEndOf="@id/add_mileage_til"
+                app:layout_constraintStart_toStartOf="@id/add_mileage_til"
+                app:layout_constraintTop_toTopOf="parent" >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/add_date_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="01.01.0001"
+                    android:gravity="center_horizontal"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/add_mileage_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:text="@string/text_mileage"
+                android:gravity="end"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@id/add_mileage_til"
+                app:layout_constraintBottom_toBottomOf="@+id/add_mileage_til"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/add_mileage_til" />
+
+            <TextView
+                android:id="@+id/add_mileage_title2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:text="@string/text_km"
+                android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/add_mileage_til"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/add_mileage_til"
+                app:layout_constraintTop_toTopOf="@+id/add_mileage_til" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/add_mileage_til"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="text"
+                android:hint="123 456"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toStartOf="@id/add_mileage_title2"
+                app:layout_constraintStart_toEndOf="@+id/add_mileage_title"
+                app:layout_constraintTop_toBottomOf="@+id/add_date_til"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/add_mileage_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
+        tools:listitem="@layout/item_add"
+        app:layout_constraintTop_toBottomOf="@+id/add_header_card" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/fab_add_part"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="part"
+            app:layout_wrapBehaviorInParent="vertical_only"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintEnd_toStartOf="@id/fab_add_work"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/fab_add_work"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="work"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fab_add_part" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
