--- a/app/src/main/res/layout/item_add.xml
+++ b/app/src/main/res/layout/item_add.xml
@@ -32,11 +32,11 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="00 шт"
-            app:layout_constraintEnd_toStartOf="@+id/sum"
-            app:layout_constraintTop_toTopOf="@+id/sum" />
+            app:layout_constraintEnd_toStartOf="@+id/cost"
+            app:layout_constraintTop_toTopOf="@+id/cost" />
 
         <TextView
-            android:id="@+id/sum"
+            android:id="@+id/cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="00 000 грн"
